--- a/src/app/pages/ai_models/ai-front.component.html
+++ b/src/app/pages/ai_models/ai-front.component.html
@@ -1,11 +1,27 @@
-<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
-  <mat-tab label="AI Summary">
-    <app-ai-summary></app-ai-summary>    
-  </mat-tab>
-  <mat-tab label="BOMs">
-    <app-ai-cnn></app-ai-cnn>
-  </mat-tab>
-  <mat-tab label="Where Used">
-    <app-ai-lstm></app-ai-lstm>
-  </mat-tab>
-</mat-tab-group>
+<div class="sidebar" data-color="danger" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
+  <app-sidebar></app-sidebar>
+  <div class="sidebar-background" style="background-image: url(./assets/images/sidebar-4.jpg)"></div> 
+</div>
+<div class="main-panel" style="color: white;">
+  <user-navbar></user-navbar>
+  <section class="bg-account-pages vh-200" style="padding-top: 25px;">
+    <div class="main-content">
+      <mat-tab-group mat-align-tabs="start">
+      <mat-tab 
+      [labelClass]="'no-ink-bar'"
+      label="AI Summary">
+        <app-ai-summary></app-ai-summary>    
+      </mat-tab>
+      <mat-tab label="CNN">
+        <app-ai-cnn></app-ai-cnn>
+      </mat-tab>
+      <mat-tab label="LSTM">
+        <app-ai-lstm></app-ai-lstm>
+      </mat-tab>
+    </mat-tab-group>
+    </div>
+  </section>
+
+
+
+</div>
