Posts Component updated

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -49,6 +49,9 @@ id="navbar">
           <li class="nav-item" [routerLink]="'/dashboard'">
             <a href="javascript: void(0);" [routerLinkActive]="'active'" class="nav-link">Dashboard</a>
           </li>
+          <li class="nav-item" [routerLink]="'/testimonials'">
+            <a href="javascript: void(0);" [routerLinkActive]="'active'" class="nav-link">Testimonials</a>
+          </li>
         }
       }
       <!-- <li class="nav-item" [ngClass]="{'active':currentSection === 'pricing'}">
