--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -1,1 +1,9 @@
-<p>posts works!</p>
+<app-header></app-header>
+<section class="bg-account-pages vh-100" style="padding-top: 25px;">
+<div id="outPopUp" class="text-white">
+   <p>Please close the session window</p>
+</div>
+</section>
+
+<!-- end of page  -->
+<app-footer></app-footer>
