--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -1,8 +1,12 @@
 <app-header></app-header>
 <section class="bg-account-pages vh-100" style="padding-top: 25px;">
-<div id="outPopUp" class="text-white">
+<!-- <div id="outPopUp" class="text-white">
    <p>Please close the session window</p>
-</div>
+</div> -->
+
+
+
+
 </section>
 
 <!-- end of page  -->
