--- a/src/app/shared/user-footer/user-footer.component.html
+++ b/src/app/shared/user-footer/user-footer.component.html
@@ -1,33 +1,25 @@
-<footer class="footer ">
-    <div class="container-fluid">
-        <nav class="pull-left">
-            <ul>
-                <li>
-                    <a href="https://www.creative-tim.com">
-                        Creative Tim
-                    </a>
-                </li>
-                <li>
-                    <a href="https://creative-tim.com/about-us">
-                        About Us
-                    </a>
-                </li>
-                <li>
-                    <a href="http://blog.creative-tim.com">
-                        Blog
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.creative-tim.com/license">
-                        Licenses
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <div class="copyright pull-right">
-            &copy;
-            {{test | date: 'yyyy'}}, made with love by
-            <a href="/" target="_blank">Your Heart AI</a> for a better world.
-        </div>
+<footer class="footer">
+  <div class="container-fluid">
+    <nav class="pull-left">
+      <ul>
+        <li>
+          <a href="javascript: void(0);"> YourHeartAI </a>
+        </li>
+        <li>
+          <a href="javascript: void(0);"> About Us </a>
+        </li>
+        <li>
+          <a href="javascript: void(0);"> Blog </a>
+        </li>
+        <li>
+          <a href="javascript: void(0);"> Licenses </a>
+        </li>
+      </ul>
+    </nav>
+    <div class="copyright pull-right">
+      &copy;
+      {{ test | date : "yyyy" }}, made with love by
+      <a href="/" target="_blank">Your Heart AI</a> for a better world.
     </div>
+  </div>
 </footer>
