--- a/src/app/pages/userpages/user-profile/user-profile.component.html
+++ b/src/app/pages/userpages/user-profile/user-profile.component.html
@@ -160,7 +160,7 @@
                   <div class="card card-profile">
                       <div class="card-avatar">
                           <a href="javascript:void(0)">
-                            <img class="img" src="{{ this.image_file }}"> />
+                            <img class="img" src="{{ this.image_file }}"> 
                           </a>
                       </div>
                       <div class="card-body">
