MLP Inference Implementation

--- a/src/app/pages/ai_models/ai-front.component.html
+++ b/src/app/pages/ai_models/ai-front.component.html
@@ -24,10 +24,11 @@
         <mat-tab label="MLP">
           <app-ai-mlp></app-ai-mlp>
         </mat-tab>
-        <mat-tab label="Cancer">
+        <!-- <mat-tab label="Cancer">
           <app-temp></app-temp>
-        </mat-tab>
+        </mat-tab> -->
       </mat-tab-group>
     </div>
+    <app-user-footer></app-user-footer>
   </section>
 </div>
