--- a/src/app/pages/ai_models/ai-summary/ai-summary.component.html
+++ b/src/app/pages/ai_models/ai-summary/ai-summary.component.html
@@ -1,1 +1,133 @@
-<p>AI Summary WOrks</p>
+<div class="container-fluid">
+  <div class="row">
+
+
+    
+
+    <!--Card body Begins--> 
+    <div class="col-md-6">
+      <div class="card">
+
+        <div class="card-header card-header-danger">
+          <h4 class="card-title">Stenosis Detection</h4>
+          <p class="card-category">
+            Summary of Patients Results
+          </p>
+        </div>
+
+        <div class="card-body">
+          Results
+          <!-- <div class="row">
+            <div class="col-md-4">
+              <mat-form-field>
+                <mat-label>CHD Risk Percentage</mat-label>
+                <input
+                  matInput
+                  placeholder=""
+                  type="text"
+                  formControlName="chdRiskPercent"
+                />
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <mat-form-field class="example-full-width">
+                <mat-label>CHD Risk</mat-label>
+                <input
+                  matInput
+                  placeholder=""
+                  type="text"
+                  formControlName="chdRiskFeedback"
+                />
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <mat-form-field class="example-full-width">
+                <mat-label>Dr's Note</mat-label>
+                <input
+                  matInput
+                  placeholder=""
+                  type="text"
+                  formControlName="drsNote"
+                />
+              </mat-form-field>
+            </div>
+          </div> -->
+        </div>
+               <!-- <p style="color: MediumSeaGreen">
+          @if (this.aiPrediction){
+            Diagnosis for the following image is: <u><h3 style="color:MediumSeaGreen;">{{ this.aiPrediction.prediction }}</h3></u><br>
+            <img class="img" src="{{ this.aiImage_url }}" width="512" height="512">
+          }    
+        </p> -->
+      </div>
+    </div>
+    <!--Card body End--> 
+    <!--Card body Begins--> 
+    <div class="col-md-6">
+      <div class="card">
+
+        <div class="card-header card-header-danger">
+          <h4 class="card-title">Baseline Coronary Heart Risk</h4>
+          <p class="card-category">
+            Summary of Patients Results
+          </p>
+        </div>
+
+        <div class="card-body">
+          Results
+          <!-- <div class="row">
+            <div class="col-md-4">
+              <mat-form-field>
+                <mat-label>CHD Risk Percentage</mat-label>
+                <input
+                  matInput
+                  placeholder=""
+                  type="text"
+                  formControlName="chdRiskPercent"
+                />
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <mat-form-field class="example-full-width">
+                <mat-label>CHD Risk</mat-label>
+                <input
+                  matInput
+                  placeholder=""
+                  type="text"
+                  formControlName="chdRiskFeedback"
+                />
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <mat-form-field class="example-full-width">
+                <mat-label>Dr's Note</mat-label>
+                <input
+                  matInput
+                  placeholder=""
+                  type="text"
+                  formControlName="drsNote"
+                />
+              </mat-form-field>
+            </div>
+          </div> -->
+        </div>
+               <!-- <p style="color: MediumSeaGreen">
+          @if (this.aiPrediction){
+            Diagnosis for the following image is: <u><h3 style="color:MediumSeaGreen;">{{ this.aiPrediction.prediction }}</h3></u><br>
+            <img class="img" src="{{ this.aiImage_url }}" width="512" height="512">
+          }    
+        </p> -->
+      </div>
+    </div>
+    <!--Card body End--> 
+
+  </div>
+</div>
