--- a/src/app/pages/index1/index1.component.html
+++ b/src/app/pages/index1/index1.component.html
@@ -63,7 +63,7 @@
 
  <!--END HOME-->
  <div appScrollspy [spiedTags]="['SECTION']" (sectionChange)="onSectionChange($event)">
-   <app-services></app-services>
+   <!-- <app-services></app-services> -->
    <app-features></app-features>
    <!-- <app-pricing></app-pricing> -->
    <!-- <app-team></app-team> -->
