--- a/src/app/pages/ai_models/ai-mlp/ai-mlp.component.html
+++ b/src/app/pages/ai_models/ai-mlp/ai-mlp.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-6">
       <div class="card">
         <div class="card-header card-header-danger">
           <h4 class="card-title">Coronary Heart Disease Risk Predictor</h4>
@@ -9,7 +9,7 @@
           </p>
         </div>
         <div class="card-body">
-          <form>           
+          <form [formGroup]="form" (ngSubmit)="onSubmit()">          
 
             <!-- line -->
             <div class="row">
@@ -56,7 +56,7 @@
                     matInput
                     placeholder="Resting Blood Pressure"
                     type="text"
-                    formControlName="restingBP "
+                    formControlName="restingBP"
                   />
                 </mat-form-field>
               </div>
@@ -82,7 +82,8 @@
                   />
                 </mat-form-field>
               </div>
-            </div><!-- line -->
+            </div>
+            <!-- line -->
             <div class="row">
               <div class="col-md-4">
                 <mat-form-field class="example-full-width">
@@ -117,7 +118,8 @@
                   />
                 </mat-form-field>
               </div>
-            </div><!-- line -->
+            </div>
+            <!-- line -->
             <div class="row">
               <div class="col-md-4">
                 <mat-form-field class="example-full-width">
@@ -154,86 +156,76 @@
               </div>
             </div>
 
-            <!-- line -->
-            <div class="row">
-              <div class="col-md-12">
-                <mat-form-field
-                  class="example-full-width"
-                  style="min-width: 100%"
-                >
-                  <mat-label>About Me</mat-label>
-                  <textarea
-                    matInput
-                    placeholder=" Enter information about yourself"
-                    formControlName="aboutMe"
-                  ></textarea>
-                </mat-form-field>
-              </div>
-            </div>
-            <!-- line -->
-
             <button
               mat-raised-button
               type="submit"
               class="btn btn-danger pull-right">
-              Update Profile
+              Get Prediction
             </button>
 
             <div class="clearfix"></div>
           </form>
+          
         </div>
       </div>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-6">
       <div class="card card-profile">
         <div class="card-header card-header-danger">
           <h4 class="card-title">AI Diagnoses</h4>
           <p class="card-category">Your Results</p>
         </div>
         <div class="card-body">
-          Results
-          <div class="row">
-            <div class="col-md-4">
-              <mat-form-field>
-                <mat-label>CHD Risk Percentage</mat-label>
-                <input
-                  matInput
-                  placeholder=""
-                  type="text"
-                  formControlName="chdRiskPercent"
-                />
-              </mat-form-field>
+          <form [formGroup]="form">
+
+            Results
+            <div class="row">
+              <div class="col-md-12">
+                <mat-form-field>
+                  <mat-label>CHD Risk Percentage</mat-label>
+                  <!-- <input matInput placeholder="" type="text"/> -->
+
+                  @if (this.aiPrediction){
+
+                  }
+                  <input
+                    matInput
+                    placeholder=""
+                    type="text"
+                    formControlName="chdRiskPercent"
+                  />
+                </mat-form-field>
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4">
-              <mat-form-field class="example-full-width">
-                <mat-label>CHD Risk</mat-label>
-                <input
-                  matInput
-                  placeholder=""
-                  type="text"
-                  formControlName="chdRiskFeedback"
-                />
-              </mat-form-field>
+            <div class="row">
+              <div class="col-md-12">
+                <mat-form-field class="example-full-width">
+                  <mat-label>CHD Risk</mat-label>
+                  <input
+                    matInput
+                    placeholder=""
+                    type="text"
+                    formControlName="chdRiskFeedback"
+                  />
+                </mat-form-field>
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4">
-              <mat-form-field class="example-full-width">
-                <mat-label>Dr's Note</mat-label>
-                <input
-                  matInput
-                  placeholder=""
-                  type="text"
-                  formControlName="drsNote"
-                />
-              </mat-form-field>
+            <div class="row">
+              <div class="col-md-12">
+                <mat-form-field class="example-full-width" style="min-width: 100%" >
+                  <mat-label>Dr's Note</mat-label>
+                  <textarea matInput placeholder=""></textarea>
+                  <!-- <textarea matInput placeholder=" Enter information about yourself" formControlName="drsNote"></textarea> -->
+                </mat-form-field>
+              </div>
             </div>
-          </div>
+          </form>
+
         </div>
       </div>
     </div>
+
+    
   </div>
 </div>
