--- a/src/app/pages/userpages/user-profile/user-profile.component.html
+++ b/src/app/pages/userpages/user-profile/user-profile.component.html
@@ -170,10 +170,7 @@
                           <!-- <p class="card-description">
                               Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
                           </p> -->
-                          <!-- <a href="javascript:void(0)" class="btn btn-danger btn-round">Follow</a> -->    
-                          
-                          
-
+                          <!-- <a href="javascript:void(0)" class="btn btn-danger btn-round">Follow</a> -->   
 
                           <!-- ########## upload image secion begins ########## -->
                           
@@ -190,9 +187,9 @@
                             </div>
                           </div> -->
 
-                          <button  mat-raised-button type="submit" class="btn btn-danger pull-right m-2" (click)="updateProfilePic()">Update Profile Pic</button>
+                          <button  mat-raised-button type="submit" class="btn btn-danger pull-right m-2" (click)="updateProfilePic()">Upload Pic</button>
                           <button [disabled]="!this.currentUser.image[0]" mat-raised-button  type="submit" class="btn btn-danger pull-right" (click)="submitProfilePic()">
-                            Submit</button>
+                            Update</button>
 
                           <input 
                           type="file" 
@@ -226,7 +223,7 @@
           </div>
       </div>
     </div>
-<!-- end of page  -->
+  <!-- end of page  -->
      <!-- <app-footer></app-footer> -->
      <app-user-footer></app-user-footer>
      </section>
