--- a/src/app/shared/features/features.component.html
+++ b/src/app/shared/features/features.component.html
@@ -4,22 +4,24 @@
     <div class="row vertical-content">
       <div class="col-lg-5">
         <div class="features-box">
-          <h3>A digital web design studio creating modern & engaging online experiences</h3>
-          <p class="text-muted web-desc">Separated they live in Bookmarksgrove right at the coast of the Semantics, a
-            large language ocean. A small river named Duden flows by their place and supplies it with the necessary
-            regelialia.</p>
+          <h3>An application to  bring a suite of AI tools to aid in predicting & managing pre-coronary heart disease.</h3>
+          <p class="text-muted web-desc">List of Tools available on the platform:</p>
           <ul class="text-muted list-unstyled mt-4 features-item-list">
-            <li class="">We put a lot of effort in design.</li>
-            <li class="">The most important ingredient of successful website.</li>
-            <li class="">Sed ut perspiciatis unde omnis iste natus error sit.</li>
-            <li class="">Submit Your Organization.</li>
+            <li class="">Real-time Stenosis Image Segmentation</li>
+            <li class="">Baseline Coronary Heart Disease prediction</li>
+            <li class="">Endotheliad Damage early detection ...Coming soon.</li>
+            <li class="">Atherosclerosis monitoring & management tool ... Coming soon.</li>
           </ul>
-          <a href="javascript: void(0);" class="btn btn-primary mt-4">Learn More <i class="mdi mdi-arrow-right"></i></a>
+          @if (this.isLoggedIn) {
+          <a href="javascript: void(0);" class="btn btn-primary mt-4" routerLink="/ai-front">AI Models <i class="mdi mdi-arrow-right"></i></a>
+        }
         </div>
       </div>
       <div class="col-lg-7">
         <div class="features-img features-right text-right">
-          <img src="assets/images/online-world.svg" alt="macbook image" class="img-fluid">
+          <!-- <img src="assets/images/online-world.svg" alt="macbook image" class="img-fluid"> -->
+          <!-- <img src="assets/images/cvd_images/coronary_artery_stenosis2.png" alt="macbook image" class="img-fluid"> -->
+          <img src="assets/images/cvd_images/heartbeat_alt.png" alt="macbook image" class="img-fluid">
         </div>
       </div>
     </div>
@@ -33,10 +35,15 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="text-white">????</h2>
-        <p class="pt-3 home-desc">But nothing the copy said could convince her and so it didn’t take long
-          until a few insidious Copy Writers ambushed her.</p>
+        <h2 class="text-white">YourHeartAI</h2>
+        <p class="pt-3 home-desc">Changing one heartbeat at a time.</p>
         <!-- <a href="javascript: void(0);" class="btn btn-white mt-4 mb-5">View Plan & Pricing</a> -->
+      </div>
+      <div class="features-img features-right text-right">
+        <!-- <img src="assets/images/online-world.svg" alt="macbook image" class="img-fluid"> -->
+        <!-- <img src="assets/images/cvd_images/stenosis_image1.png" alt="macbook image" class="img-fluid"> -->
+        <img src="assets/images/cvd_images/array_sten_img.png" alt="macbook image" class="img-fluid">
+        <img src="assets/images/cvd_images/coronary_artery_stenosis2.png" alt="macbook image" class="img-fluid">
       </div>
     </div>
   </div>
