clean up commits

--- a/src/app/pages/userpages/dashboard/dashboard.component.html
+++ b/src/app/pages/userpages/dashboard/dashboard.component.html
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-4">
                 <div class="card card-chart">
                     <div class="card-header card-header-success">
@@ -127,8 +127,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
+
         <div class="row">
+
             <div class="col-lg-6 col-md-12">
                 <div class="card">
                     <div class="card-header card-header-tabs card-header-primary">
@@ -377,40 +379,40 @@
             <div class="col-lg-6 col-md-12">
                 <div class="card">
                     <div class="card-header card-header-warning">
-                        <h4 class="card-title">Employees Stats</h4>
-                        <p class="card-category">New employees on 15th September, 2016</p>
+                        <h4 class="card-title">Patient History</h4>
+                        <p class="card-category">Recent Patients accessed system</p>
                     </div>
                     <div class="card-body table-responsive">
                         <table class="table table-hover">
                             <thead class="text-warning">
                                 <th>ID</th>
                                 <th>Name</th>
-                                <th>Salary</th>
+                                <th>Fee</th>
                                 <th>Country</th>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>1</td>
                                     <td>Dakota Rice</td>
-                                    <td>$36,738</td>
+                                    <td>£80.00</td>
                                     <td>Niger</td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
                                     <td>Minerva Hooper</td>
-                                    <td>$23,789</td>
+                                    <td>£120.00</td>
                                     <td>Curaçao</td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
                                     <td>Sage Rodriguez</td>
-                                    <td>$56,142</td>
+                                    <td>£45.50</td>
                                     <td>Netherlands</td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
                                     <td>Philip Chaney</td>
-                                    <td>$38,735</td>
+                                    <td>£69.53</td>
                                     <td>Korea, South</td>
                                 </tr>
                             </tbody>
@@ -418,6 +420,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
     </div>
