--- a/src/app/shared/features/features.component.html
+++ b/src/app/shared/features/features.component.html
@@ -37,13 +37,20 @@
       <div class="col-lg-12 text-center">
         <h2 class="text-white">YourHeartAI</h2>
         <p class="pt-3 home-desc">Changing one heartbeat at a time.</p>
-        <!-- <a href="javascript: void(0);" class="btn btn-white mt-4 mb-5">View Plan & Pricing</a> -->
+        <a href="javascript: void(0);" class="btn btn-white mt-4 mb-5">View Plan & Pricing</a>
       </div>
-      <div class="features-img features-right text-right">
+      <div class="features-img features-right geeks">
         <!-- <img src="assets/images/online-world.svg" alt="macbook image" class="img-fluid"> -->
-        <!-- <img src="assets/images/cvd_images/stenosis_image1.png" alt="macbook image" class="img-fluid"> -->
         <img src="assets/images/cvd_images/array_sten_img.png" alt="macbook image" class="img-fluid">
+        <!-- <img src="assets/images/cvd_images/coronary_artery_stenosis2.png" alt="macbook image" class="img-fluid"> -->
+      </div>
+      <div class="features-img features-right geeks">
+        <!-- <img src="assets/images/cvd_images/array_sten_img.png" alt="macbook image" class="img-fluid">       -->
         <img src="assets/images/cvd_images/coronary_artery_stenosis2.png" alt="macbook image" class="img-fluid">
+      </div>
+      <div class="features-img features-right geeks">
+        <!-- <img src="assets/images/cvd_images/array_sten_img.png" alt="macbook image" class="img-fluid">       -->
+        <img src="assets/images/cvd_images/stenosis_image1.png" alt="macbook image" class="img-fluid">
       </div>
     </div>
   </div>
